--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "slick-carousel": "^1.8.1"
   },
