--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/lucasheverton/introduction-gulp#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
     "jquery": "^3.6.0",
-    "node-sass": "^6.0.1",
+    "live-server": "^1.2.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
